# kapla-v2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
demo/: pyproject.toml
demo/applications/demo-app/: project.yml  pyproject.toml
demo/applications/demo-app2/: project.yml  pyproject.toml
demo/applications/demo-app2/src/demo/apps/app2/: __main__.py
demo/libraries/demo-lib/: project.yml  requirements.txt
demo/plugins/demo-plugin/: project.yml
kapla/: __main__.py  pyproject.py
kapla/cli/: __main__.py  app.py  build.py  cmd.py  concurrency.py  config.py  datatypes.py  errors.py  finder.py  install.py  licenses.py  list.py  project.py  repo.py  run.py  uninstall.py  venv.py
kapla/core/: __init__.py  base.py  cmd.py  errors.py  finder.py  git.py  io.py  kproject.py  logger.py  pyproject.py  repo.py  templates.py  timeout.py
kapla/projects/: base.py  kproject.py  krepo.py  pyproject.py
kapla/specs/: __init__.py  base.py  common.py  kproject.py  pyproject.py  repo.py
kapla/wrappers/: git.py  poetry.py
scripts/: build_docker.sh
src/kapla/cli/: app.py  build.py  install.py  list.py  project.py  repair.py  run.py  uninstall.py  venv.py
src/kapla/core/: __init__.py  cmd.py  finder.py  templates.py  timeout.py
src/kapla/projects/: base.py  kproject.py  krepo.py  pyproject.py
src/kapla/specs/: __init__.py  base.py  common.py  kproject.py  lock.py  pyproject.py
src/kapla/wrappers/: poetry.py
tests/: test_version.py
