[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["charbonnierg <guillaume.charbonnier@araymond.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
pydantic = "^1.9.0"
nats-py = "^2.0.0"
dateutils = "^0.6.12"
pymongo = "^4.0.1"
anyio = "^3.5.0"
starlette = "^0.18.0"
typer = "^0.4.0"

[tool.poetry.group.dev.dependencies]
nkeys = "^0.1.0"

[tool.kapla.workspaces]
apps = ["applications"]
libs = ["libraries"]
plugins = ["plugins"]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"